# cortex

./: .dockerignore  .env.example  .gitignore  .railwayignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: SYSTEM_PROMPT.md
docs/decisions/: 0001-event-sourcing-store-append-only.md  0002-extractor-determinista-por-defecto.md  0003-proveedor-inferencia.md  0004-grafo-con-evidencia-obligatoria.md  0005-resolucion-entidades-umbral-desambiguacion.md  0006-compromisos-como-hechos-de-grafo.md
migrations/: env.py
migrations/versions/: 20260705_0001_initial_schema.py
scripts/: bootstrap.ps1  bootstrap.sh
src/cortex/: __init__.py  cli.py  settings.py
tests/: conftest.py  test_answer.py  test_api.py  test_chunking.py  test_cli_ask_digest.py  test_cli_ingest.py  test_connector_idempotency.py  test_embeddings.py  test_events_append_only.py  test_extraction.py  test_fixture_connector.py  test_governance_inbox.py  test_inference_provider.py  test_lifecycle.py  test_meetings.py  test_memory_graph.py  test_orchestrator.py  test_panels.py  test_pipeline_build.py  test_postgres_integration.py  test_rebuild.py  test_resolution.py  test_retrieval.py  test_simulator.py  test_simulator_evaluation.py  test_simulator_sandbox.py  test_simulator_snapshot.py
tests/fixtures/: sample_emails.jsonl
tests/injection_suite/: __init__.py  test_injection_suite.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
web/src/: App.tsx  index.css  (+1 more)
(+65 files in other folders)
